decresed font size to prevent overflow of text

--- a/main.css
+++ b/main.css
@@ -15,10 +15,11 @@ flex: 0 0 90%;
 }
 .screen{
     width: 100%;
-    font-size: 8rem;
+    font-size: 3rem;
     background-color: rgb(7, 7, 17);
     color: white;
     overflow: hidden;
+    padding: 2rem 0rem;
 }
 .buttons{
     display: flex;
